--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,6 +34,9 @@ jobs:
         
       - name: Build with Next.js
         run: npm run build
+
+      - name: Copy .nojekyll
+        run: touch ./out/.nojekyll
         
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v4
