--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,10 +33,10 @@ jobs:
         run: npm ci
         
       - name: Build with Next.js
-        run: npm run build
-
-      - name: Copy .nojekyll
-        run: touch ./out/.nojekyll
+        run: |
+          npm run build
+          touch ./out/.nojekyll
+          cp ./public/.nojekyll ./out/
         
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v4
