--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,7 +30,12 @@ jobs:
         uses: actions/configure-pages@v4
         
       - name: Install dependencies
-        run: npm ci
+        run: |
+          rm -rf node_modules
+          rm -f package-lock.json
+          npm install
+          npm install framer-motion@latest
+          npm install tailwindcss@latest postcss@latest autoprefixer@latest
         
       - name: Build with Next.js
         run: |
